--- a/index.html
+++ b/index.html
@@ -14,18 +14,28 @@
     <H1>Hey there I have a cool site</H1>
   </header>
   <main>
+    <div class="bluebox"></div>
     <div>
       <h2>Why designers are important!</h2>
     </div>
-    <div>
-      <p><b>Lorem ipsum</b> dolor sit amet, consectetur adipisicing elit. Autem eos, sequi labore possimus velit tempora
-        atque reiciendis sapiente! Saepe perspiciatis expedita quam obcaecati recusandae provident molestias dolores
-        modi quas atque.</p>
+    <div class="columns">
+      <p><b>Lorem ipsum</b> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut aspernatur laudantium
+        corporis. Commodi, dicta, unde, dolore consectetur deserunt excepturi illum voluptates aliquam repudiandae sunt
+        molestias minus quae eum et maxime?Architecto, cupiditate ducimus! Adipisci quibusdam beatae sint consequatur
+        vero animi architecto amet, dolorum distinctio, earum consectetur laudantium, exercitationem dolores.
+        Voluptatem, quasi ad reiciendis aliquid voluptatibus dicta praesentium repudiandae consequatur dolorem. dolor
+        sit amet, consectetur adipisicing elit. Autem eos, sequi labore possimus velit temp</p>
       <p><b>Lorem ipsum</b> dolor sit amet consectetur, adipisicing elit. Porro, quibusdam impedit. Vero quae, aperiam
         dolore autem nostrum aut eligendi dolores ad qui officia neque nulla exercitationem enim voluptate reiciendis
         consectetur.Nihil, veritatis. Odio quia recusandae perspiciatis inventore suscipit, saepe minima ipsum libero
         dolorum nulla reiciendis a nemo quos dolore ea natus accusamus, quasi delectus debitis fugit, aliquid beatae!
         Incidunt, similique?</p>
+      <div class="secondcolumn">
+        <img src="//placehold.it/200x150" alt="">
+        <h3>loren ipsum</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi aspernatur atque aperiam delectus.</p>
+
+      </div>
     </div>
   </main>
   <footer></footer>
